<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addPocketFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addPocketFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="278dp"
            android:layout_height="362dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="21dp"
            android:src="@drawable/add_pic"
            app:layout_constraintBottom_toTopOf="@+id/etPocketBalance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/txtAddPocket"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtAddPocket"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add \nPocket"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.127" />

        <EditText
            android:id="@+id/etPocketName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:ems="10"
            android:hint="Pocket Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddPocket"
            app:layout_constraintVertical_bias="0.021" />

        <com.tobiasschuerg.prefixsuffix.PrefixSuffixEditText
            android:id="@+id/etPocketBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Pocket Balance"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPocketName"
            app:layout_constraintVertical_bias="0.151"
            app:prefix="$" />

        <Button
            android:id="@+id/btnAddPocket"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="ADD POCKET"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPocketBalance"
            app:layout_constraintVertical_bias="0.204"
            android:backgroundTint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>