<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home" />
    <item
        android:id="@+id/menu_pocket"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="Pocket" />

    <item
        android:id="@+id/menu_bill"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="Bill" />

    <item
        android:id="@+id/menu_reminder"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_date_range_24"
        android:title="Reminder" />

<!--    <item-->
<!--        android:id="@+id/menu_map"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_baseline_location_on_24"-->
<!--        android:title="Map" />-->

    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_face_24"
        android:title="Profile" />


</menu>