<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pocketFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pocketFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPocketPage"
            android:layout_width="match_parent"
            android:layout_height="530dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/white"
            tools:listitem="@layout/rv_pocket" />

        <Button
            android:id="@+id/addPocketButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="138dp"
            android:layout_marginBottom="86dp"
            android:text="ADD POCKET"
            android:backgroundTint="@color/black"/>
    </RelativeLayout>
</FrameLayout>